src/objects/Contracted_Quote_Line_Item_c_x__x.object
<CustomObject>
    <externalDataSource>ALU_Data_Source_New</externalDataSource>
    <externalName>Contracted_Quote_Line_Item_c__x</externalName>
    <label>Surround CQ Line Item</label>
    <pluralLabel>Surround CQ Line Items</pluralLabel>
    <fields>
        <fullName>BD_Description_c_c__c</fullName>
        <externalDeveloperName>BD_Description_c__c</externalDeveloperName>
        <label>BU Description</label>
        <length>1300</length>
        <readOnlyProxy>true</readOnlyProxy>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>BL_Description_c_c__c</fullName>
        <externalDeveloperName>BL_Description_c__c</externalDeveloperName>
        <label>BG Description</label>
        <length>1300</length>
        <readOnlyProxy>true</readOnlyProxy>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>BU_Description_c_c__c</fullName>
        <externalDeveloperName>BU_Description_c__c</externalDeveloperName>
        <label>BL Description</label>
        <length>1300</length>
        <readOnlyProxy>true</readOnlyProxy>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Business_Division_BD_c_c__c</fullName>
        <externalDeveloperName>Business_Division_BD_c__c</externalDeveloperName>
        <label>Business Division (BU)</label>
        <length>1300</length>
        <readOnlyProxy>true</readOnlyProxy>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Business_Line_BL_c_c__c</fullName>
        <externalDeveloperName>Business_Line_BL_c__c</externalDeveloperName>
        <label>Business Line (BG)</label>
        <length>1300</length>
        <readOnlyProxy>true</readOnlyProxy>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Business_Unit_BU_c_c__c</fullName>
        <externalDeveloperName>Business_Unit_BU_c__c</externalDeveloperName>
        <label>Business Unit (BL)</label>
        <length>1300</length>
        <readOnlyProxy>true</readOnlyProxy>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Contracted_Quote_Name_c_c__c</fullName>
        <externalDeveloperName>Contracted_Quote_Name_c__c</externalDeveloperName>
        <label>Contracted Quote Name</label>
        <length>1300</length>
        <readOnlyProxy>true</readOnlyProxy>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Contracted_Quote_c_c__c</fullName>
        <externalDeveloperName>Contracted_Quote_c__c</externalDeveloperName>
        <label>Contracted Quote</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CreatedById_c__c</fullName>
        <externalDeveloperName>CreatedById__c</externalDeveloperName>
        <label>Created By ID</label>
        <length>18</length>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CreatedDate_c__c</fullName>
        <externalDeveloperName>CreatedDate__c</externalDeveloperName>
        <label>Created Date</label>
        <readOnlyProxy>true</readOnlyProxy>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Created_By_Name_c_c__c</fullName>
        <externalDeveloperName>Created_By_Name_c__c</externalDeveloperName>
        <label>Created By Name</label>
        <length>1300</length>
        <readOnlyProxy>true</readOnlyProxy>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Date_c_c__c</fullName>
        <externalDeveloperName>Date_c__c</externalDeveloperName>
        <label>Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>IsDeleted_c__c</fullName>
        <defaultValue>false</defaultValue>
        <externalDeveloperName>IsDeleted__c</externalDeveloperName>
        <label>Deleted</label>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LastActivityDate_c__c</fullName>
        <externalDeveloperName>LastActivityDate__c</externalDeveloperName>
        <label>Last Activity Date</label>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>LastModifiedById_c__c</fullName>
        <externalDeveloperName>LastModifiedById__c</externalDeveloperName>
        <label>Last Modified By ID</label>
        <length>18</length>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LastModifiedDate_c__c</fullName>
        <externalDeveloperName>LastModifiedDate__c</externalDeveloperName>
        <label>Last Modified Date</label>
        <readOnlyProxy>true</readOnlyProxy>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Last_Modified_By_Name_c_c__c</fullName>
        <externalDeveloperName>Last_Modified_By_Name_c__c</externalDeveloperName>
        <label>Last Modified By Name</label>
        <length>1300</length>
        <readOnlyProxy>true</readOnlyProxy>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Line_Item_Description_c_c__c</fullName>
        <externalDeveloperName>Line_Item_Description_c__c</externalDeveloperName>
        <label>Line Item Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Name_c__c</fullName>
        <externalDeveloperName>Name__c</externalDeveloperName>
        <label>CQLI Number</label>
        <length>80</length>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>No_TSR_Match_c_c__c</fullName>
        <defaultValue>false</defaultValue>
        <externalDeveloperName>No_TSR_Match_c__c</externalDeveloperName>
        <label>No TSR Match</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Not_an_Opportunity_Product_c_c__c</fullName>
        <defaultValue>false</defaultValue>
        <externalDeveloperName>Not_an_Opportunity_Product_c__c</externalDeveloperName>
        <label>Not an Opportunity Product</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Notes_about_Product_c_c__c</fullName>
        <externalDeveloperName>Notes_about_Product_c__c</externalDeveloperName>
        <label>Notes about Product</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PL_Code_c_c__c</fullName>
        <externalDeveloperName>PL_Code_c__c</externalDeveloperName>
        <label>Portfolio Package (PP)</label>
        <length>1300</length>
        <readOnlyProxy>true</readOnlyProxy>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>PL_Description_c_c__c</fullName>
        <externalDeveloperName>PL_Description_c__c</externalDeveloperName>
        <label>PP Description</label>
        <length>1300</length>
        <readOnlyProxy>true</readOnlyProxy>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Product_Name_c_c__c</fullName>
        <externalDeveloperName>Product_Name_c__c</externalDeveloperName>
        <label>Product Name</label>
        <length>1300</length>
        <readOnlyProxy>true</readOnlyProxy>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Product_c_c__c</fullName>
        <externalDeveloperName>Product_c__c</externalDeveloperName>
        <label>Product</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Quantity_c_c__c</fullName>
        <externalDeveloperName>Quantity_c__c</externalDeveloperName>
        <label>Quantity</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Sales_Price_c_c__c</fullName>
        <externalDeveloperName>Sales_Price_c__c</externalDeveloperName>
        <label>Sales Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SystemModstamp_c__c</fullName>
        <externalDeveloperName>SystemModstamp__c</externalDeveloperName>
        <label>System Modstamp</label>
        <readOnlyProxy>true</readOnlyProxy>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Tendering_Support_ALU_Contact_Name_c_c__c</fullName>
        <externalDeveloperName>Tendering_Support_ALU_Contact_Name_c__c</externalDeveloperName>
        <label>Tendering Support ALU Contact Name</label>
        <length>1300</length>
        <readOnlyProxy>true</readOnlyProxy>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Tendering_Support_ALU_Contact_c_c__c</fullName>
        <externalDeveloperName>Tendering_Support_ALU_Contact_c__c</externalDeveloperName>
        <label>Tendering Support ALU Contact</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tendering_Support_Email_Address_c_c__c</fullName>
        <externalDeveloperName>Tendering_Support_Email_Address_c__c</externalDeveloperName>
        <label>Tendering Support Email Address</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Tendering_Support_Rule_Met_Number_c_c__c</fullName>
        <externalDeveloperName>Tendering_Support_Rule_Met_Number_c__c</externalDeveloperName>
        <label>Tendering Support Rule Met Number</label>
        <length>1300</length>
        <readOnlyProxy>true</readOnlyProxy>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Tendering_Support_Rule_Met_c_c__c</fullName>
        <externalDeveloperName>Tendering_Support_Rule_Met_c__c</externalDeveloperName>
        <label>Tendering Support Rule Met</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tendering_Support_User_Name_c_c__c</fullName>
        <externalDeveloperName>Tendering_Support_User_Name_c__c</externalDeveloperName>
        <label>Tendering Support User Name</label>
        <length>1300</length>
        <readOnlyProxy>true</readOnlyProxy>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Tendering_Support_User_c_c__c</fullName>
        <externalDeveloperName>Tendering_Support_User_c__c</externalDeveloperName>
        <label>Tendering Support User</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tendering_Work_Complete_c_c__c</fullName>
        <defaultValue>false</defaultValue>
        <externalDeveloperName>Tendering_Work_Complete_c__c</externalDeveloperName>
        <label>Tendering Work Complete</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Total_Price_c_c__c</fullName>
        <externalDeveloperName>Total_Price_c__c</externalDeveloperName>
        <label>Total Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
</CustomObject>